# Chatroom

./: .clang-format  .gitignore  MySQL.sql  README.md  a.out  chatroom.md  cpu_profile.prof  new_计划.md  old_message.cpp  test  test.cpp  test1.cpp  计划.md  需求.md
new_project/: CMakeLists.txt  test.cpp
new_project/FTP/: FileClient.cpp  FileClient.h  FileServer.cpp  FileServer.h  testclient.cpp  testserver.cpp  计划.md
new_project/client/: Client.cpp  Client.h
new_project/database/: DatabaseThreadPool.cpp  DatabaseThreadPool.h  MysqlConnection.cpp  MysqlConnection.h  MysqlConnectionpool.cpp  MysqlConnectionpool.h  MysqlResult.h  MysqlRow.h
new_project/ftp/: CMakeLists.txt  FileClient.cpp  FileClient.h  FileServer.cpp  FileServer.h
new_project/ftp/include/: client.hpp
new_project/ftp/src/: client.cpp  server.cpp  thread_pool.cpp
new_project/main/: client.cpp  main_client.cpp  main_server.cpp  server.cpp
new_project/main_client/: CMakeLists.txt  main_client.cpp
new_project/main_server/: CMakeLists.txt  main_server.cpp
new_project/manager/: FriendApplyManager.cpp  FriendApplyManager.h  FriendManager.cpp  FriendManager.h  IdGenerator.h  MessageManager.cpp  MessageManager.h  UserManager.cpp  UserManager.h
new_project/model/: Apply.h  Friend.h  Message.h  User.h
new_project/muduo/base/: CurrentThread.cpp  CurrentThread.h  Makefile  Thread.cpp  Thread.h  Timestamp.cpp  Timestamp.h  cmake_install.cmake  copyable.h  noncopyable.h
new_project/muduo/logging/: AsyncLogging.cpp  AsyncLogging.h  FileUtil.cpp  FileUtil.h  FixedBuffer.h  LogFile.cpp  LogFile.h  LogStream.cc  LogStream.h  Logging.cpp  Logging.h  Makefile  cmake_install.cmake
new_project/muduo/net/: Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  Makefile  cmake_install.cmake
new_project/muduo/net/poller/: DefaultPoller.cpp  EPollPoller.cpp  EPollPoller.h  Poller.cpp  Poller.h
new_project/muduo/net/tcp/: Acceptor.cpp  Acceptor.h  Callback.cpp  Callback.h  Connector.cpp  Connector.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
new_project/muduo/timer/: Makefile  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h  cmake_install.cmake
new_project/server/: Server.cpp  Server.h  Service.cpp  Service.h
new_project/server/service/: UserService.h
new_project/tool/: Codec.cpp  Codec.h  Dispatcher.h  InitTaskRunner.cpp  InitTaskRunner.h  Json.h  ThreadPool.cpp  ThreadPool.h
other/: Apply.h  FriendApplyManager.cpp  FriendManager.cpp  Message.h  UserManager.cpp  UserManager.h
project/: CMakeLists.txt  Client.cpp  Server.cpp  json_protocol.cpp  json_protocol.hpp  main_Client.cpp  main_Server.cpp
project/client/: Client.cpp  Client.h  Clientservice.cpp  Clientservice.h
project/database/: DatabaseThreadPool.cpp  DatabaseThreadPool.h  MysqlConnection.cpp  MysqlConnection.h  MysqlConnectionpool.cpp  MysqlConnectionpool.h  MysqlRow.h
project/entity/: Friend.cpp  Friend.h  Group.cpp  Group.h  GroupUser.cpp  GroupUser.h  User.cpp  User.h  other.h
project/server/: Server.cpp  Server.h  Service.cpp  Service.h  server.h
project/tool/: Codec.cpp  Codec.h  Dispatcher.h  Processpend.h
